trying to fix scroll overflow x on touch

--- a/public/css/paradisecity.css
+++ b/public/css/paradisecity.css
@@ -1,9 +1,14 @@
+html{
+  overflow-x: hidden; 
+  max-width:100vw !important;
+}
+
 body {
-color: #333;
+  color: #333;
   font-size: 14px;
   line-height: 20px;
-overflow-x: hidden;
-overflow-y: scroll;
+  overflow-x: hidden;
+  overflow-y: scroll;
 	
 }
 
@@ -1065,7 +1070,6 @@ svg:not(:root) {
   position: absolute;
   top: -90px;
   right: 0;
-  transform: translateX(100px);
 }
 
 .bradn2:hover {
